# ai_code2doc

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: design-doc.md
docs/superpowers/specs/: 2026-05-15-call-graph-design.md  2026-05-22-interactive-agent-design.md
layer3_mcp/: pyproject.toml
layer3_mcp/src/code2doc_layer3_mcp/: __init__.py  branch_manager.py  cli.py  dependency_store.py  server.py
layer3_mcp/tests/: conftest.py  test_branch_manager.py  test_dependency_store.py  test_server.py  test_tools.py
report/: test-report.md
src/ai_code2doc/: __main__.py
src/ai_code2doc/agent/: __init__.py  context.py  conversation.py  dispatcher.py  models.py  repl.py  tool_registry.py
src/ai_code2doc/analyzer/: __init__.py  c_cpp_calls.py  call_extractor.py  call_graph_builder.py  dependency_graph.py  dependency_store.py  external_libs.py  metrics.py  symbol_registry.py  tech_stack.py  type_inferrer.py
src/ai_code2doc/cli/: __init__.py  analyze_cmd.py  chat_cmd.py  main.py  mcp_cmd.py  query_cmd.py  serve_cmd.py  status_cmd.py
src/ai_code2doc/config/: __init__.py  defaults.py  settings.py
src/ai_code2doc/generator/: __init__.py  base_generator.py  layer1_overview.py  layer2_modules.py  layer3_graph.py  markdown_writer.py  prompt_templates.py
src/ai_code2doc/llm/: __init__.py  chunker.py  client.py  provider.py  token_tracker.py
src/ai_code2doc/mcp/: __init__.py  server.py  tools.py
src/ai_code2doc/models/: __init__.py  analysis_state.py  build.py  graph.py  knowledge.py  module.py  project.py
src/ai_code2doc/parser/: __init__.py  ast_queries.py  base_extractor.py  base_parser.py  base_resolver.py  import_resolver.py  language_registry.py  structure_extractor.py  tree_sitter_parser.py
tests/: conftest.py
tests/integration/: test_agent_integration.py  test_c_parser.py  test_call_graph_integration.py  test_ccpp_call_graph.py  test_change_detector.py  test_cmake_integration.py  test_dependency_graph.py  test_python_parser.py  test_tech_stack.py
tests/integration/fixtures/sample-c-project/: CMakeLists.txt  Makefile
tests/integration/fixtures/sample-c-project/include/: utils.h
tests/integration/fixtures/sample-c-project/src/: main.c  math_ops.c  utils.c
tests/integration/fixtures/sample-py-project/: pyproject.toml  requirements.txt
tests/integration/fixtures/sample-py-project/src/: __init__.py  app.py  main.py
tests/integration/fixtures/sample-py-project/src/api/: __init__.py  routes.py
tests/integration/fixtures/sample-py-project/src/models/: __init__.py  user.py
tests/integration/fixtures/sample-py-project/src/utils/: __init__.py  config.py  logger.py
tests/integration/fixtures/sample-py-project/tests/: test_main.py
tests/unit/: test_agent_context.py  test_agent_models.py  test_c_cpp_resolver_cmake.py  test_call_extractor.py  test_call_graph_builder.py  test_call_graph_integration.py  test_call_graph_models.py  test_ccpp_call_extractor.py  test_chunker.py  test_cmake_parser.py  test_conversation.py  test_dependency_store.py  test_dispatcher.py  test_external_libs.py  test_hashing.py  test_language_registry.py  test_llm_tool_use.py  test_markdown_utils.py  test_markdown_writer.py  test_mcp_server.py  test_mcp_tools.py  test_metrics.py  test_models.py  test_parse_cache.py  test_path_utils.py  test_prompt_templates.py  test_providers.py  test_repl.py  test_scanner.py  test_symbol_registry.py  test_token_tracker.py  test_tool_analyze_deps.py  test_tool_code_qa.py  test_tool_correct.py  test_tool_list_context.py  test_tool_registry.py  test_tool_rescan.py  test_tool_update_doc.py  test_type_inferrer.py
web-ui/: index.html  package.json  vite.config.ts
web-ui/src/: App.vue  main.ts
(+40 files in other folders)
