[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code2doc"
version = "0.1.0"
description = "AI Agent that analyzes Python/C/C++ projects and generates layered code knowledge systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ai-code2doc contributors"}]
keywords = ["code-analysis", "documentation", "knowledge-base", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "openai>=1.10",
    "chromadb>=0.5",
    "networkx>=3.2",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "structlog>=24",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
ai-code2doc = "ai_code2doc.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_code2doc"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
