[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code2doc-layer3-mcp"
version = "0.1.0"
description = "Standalone MCP server for Layer 3 dependency graph queries"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ai-code2doc contributors"}]
keywords = ["mcp", "dependency-graph", "code-analysis", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "mcp>=1.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
layer3-mcp = "code2doc_layer3_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code2doc_layer3_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
